Closed Bug 1079328 Opened 10 years ago Closed 10 years ago

Fix some more bad implicit constructors in parser

Categories

(Core :: DOM: HTML Parser, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

Attached patch Patch (v1)Splinter Review
      No description provided.
Attachment #8501138 - Flags: review?(hsivonen)
Attachment #8501138 - Flags: review?(hsivonen) → review+
https://hg.mozilla.org/mozilla-central/rev/99531e7a02af
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.