Bug 1079328 - Fix some more bad implicit constructors in parser; r=hsivonen